# velodyne

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  COPYING  README.md  README.rst  build_script.sh  rosdep.yaml  stack.xml  test_submodule
.circleci/: config.yml
velodyne/: CHANGELOG.rst  CMakeLists.txt  package.xml
velodyne/launch/: velodyne-all-nodes-VLP16-composed-launch.py  velodyne-all-nodes-VLP16-launch.py  velodyne-all-nodes-VLP32C-composed-launch.py  velodyne-all-nodes-VLP32C-launch.py  velodyne-all-nodes-VLS128-composed-launch.py  velodyne-all-nodes-VLS128-launch.py
velodyne_common/src/nodelets/: CMakeLists.txt  convert_back.cc  convert_rawscan.cc  driver_nodelet.cc  pointcloud_nodelet.cc  transform_nodelet.cc
velodyne_common/src/nodes/: CMakeLists.txt  cloud.cc  print.cc  read.cc
velodyne_common/tests/: CMakeLists.txt  pcap_hertz.test  pointcloud_nodelet_hertz.test  transform_hertz.test
velodyne_driver/: CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  nodelet_velodyne.xml  package.xml
velodyne_driver/cfg/: VelodyneNode.cfg  VelodyneNode.yaml
velodyne_driver/config/: VLP16-velodyne_driver_node-params.yaml  VLP32C-velodyne_driver_node-params.yaml  VLS128-velodyne_driver_node-params.yaml
velodyne_driver/include/velodyne_driver/: driver.h  driver.hpp  input.h  input.hpp  ring_sequence.h  time_conversion.hpp
velodyne_driver/launch/: launch_velodyne_node.py  nodelet_manager.launch  velodyne_driver_node-VLP16-composed-launch.py  velodyne_driver_node-VLP16-launch.py  velodyne_driver_node-VLP32C-composed-launch.py  velodyne_driver_node-VLP32C-launch.py  velodyne_driver_node-VLS128-composed-launch.py  velodyne_driver_node-VLS128-launch.py
velodyne_driver/src/driver/: CMakeLists.txt  driver.cc  driver.cpp  driver.h  driver_nodelet.cc  nodelet.cc  velodyne_node.cc  velodyne_node.cpp
velodyne_driver/src/lib/: CMakeLists.txt  input.cc  input.cpp
velodyne_driver/tests/: CMakeLists.txt  pcap_32e_node_hertz.test  pcap_32e_nodelet_hertz.test  pcap_node_hertz.test  pcap_nodelet_hertz.test  pcap_vlp16_node_hertz.test  pcap_vlp16_nodelet_hertz.test  timeconversiontest.cpp
velodyne_gps_imu/: CMakeLists.txt  package.xml
velodyne_gps_imu/src/: gpsimu_driver.cc  gpsimu_driver.h
velodyne_laserscan/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
velodyne_laserscan/cfg/: VelodyneLaserScan.cfg
velodyne_laserscan/config/: default-velodyne_laserscan_node-params.yaml
velodyne_laserscan/include/velodyne_laserscan/: velodyne_laserscan.h  velodyne_laserscan.hpp
velodyne_laserscan/launch/: velodyne_laserscan_node-composed-launch.py  velodyne_laserscan_node-launch.py
velodyne_laserscan/src/: VelodyneLaserScan.cpp  node.cpp  nodelet.cpp  velodyne_laserscan.cpp
velodyne_laserscan/tests/: CMakeLists.txt  lazy_subscriber.cpp  system.cpp
velodyne_msgs/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
velodyne_msgs/migration_rules/: velodyne_msgs.bmr
velodyne_msgs/msg/: VelodynePacket.msg  VelodyneScan.msg
velodyne_pcl/: CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  nodelets.xml  package.xml
velodyne_pcl/examples/nodelets/: CMakeLists.txt  publisher_nodelet.cc  subscriber_nodelet.cc
velodyne_pcl/examples/nodes/: CMakeLists.txt  publisher.cc  subscriber.cc
velodyne_pcl/include/velodyne_pcl/: point_types.h  point_types.hpp
velodyne_pcl/src/: velodyne_pcl.cpp
velodyne_pcl/src/nodelets/: CMakeLists.txt  cloud2_nodelet.cc  publisher.cc  transform2.cc  xyzir_publisher.cc
velodyne_pcl/src/nodes/: CMakeLists.txt  cloud2.cc  cloud2_nodelet.cc  publisher.cc  ring_colors.cc  transform2.cc  xyzir_publisher.cc
velodyne_pcl/tests/: cloud2_node_hz.test  cloud2_nodelet_hz.test  transform2.launch  transform2_hz.test
velodyne_pointcloud/: CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  nodelets.xml  package.xml
velodyne_pointcloud/cfg/: .CloudNode.cfg.swp  CloudNode.cfg  TransformNode.cfg  VelodyneConfig.cfg
velodyne_pointcloud/config/: VLP16-velodyne_convert_node-params.yaml  VLP16-velodyne_transform_node-params.yaml  VLP32C-velodyne_convert_node-params.yaml  VLP32C-velodyne_transform_node-params.yaml  VLS128-velodyne_transform_node-params.yaml  default-velodyne_transform_node-params.yaml
velodyne_pointcloud/launch/: 32e_points.launch  64e_S3.launch  VLP-32C_points.launch  VLP16_points.launch  VLS128_points.launch  cloud2_nodelet.launch  cloud_nodelet.launch  kinetic_mountain_view.launch  kinetic_mountain_view_lidar_0.launch  kinetic_mountain_view_lidar_1.launch  kinetic_mountain_view_single.launch  transform2.launch  transform2_nodelet.launch  transform_nodelet.launch  velodyne_convert_node-VLP16-composed-launch.py  velodyne_convert_node-VLP16-launch.py  velodyne_convert_node-VLP32C-composed-launch.py  velodyne_convert_node-VLP32C-launch.py  velodyne_transform_node-VLP16-composed-launch.py  velodyne_transform_node-VLP16-launch.py  velodyne_transform_node-VLP32C-composed-launch.py  velodyne_transform_node-VLP32C-launch.py  velodyne_transform_node-VLS128-composed-launch.py  velodyne_transform_node-VLS128-launch.py
velodyne_pointcloud/params/: 32db.yaml  64e_s2.1-sztaki.yaml  64e_s3-xiesc.yaml  64e_utexas.yaml  VLP16db.yaml  VLS128.yaml
velodyne_pointcloud/scripts/: add_two_pt.py  gen_calibration.py
velodyne_pointcloud/tests/: CMakeLists.txt  HDL-32-db.xml  HDL-32-db.yaml  angles-calibrated.yaml  angles.config  angles.yaml  cloud2_node_hz.test  cloud2_nodelet_hz.test  cloud_node_32e_hz.test  cloud_node_64e_s2.1_hz.test  cloud_node_hz.test  cloud_node_vlp16_hz .test  cloud_nodelet_32e_hz.test  cloud_nodelet_64e_s2.1_hz.test  cloud_nodelet_hz.test  static_vehicle_tf.launch  test_calibration.cpp  test_row_step.cpp  transform2_hz.test  transform2_node_hz.test  transform2_nodelet_hz.test  transform_node_32e_hz.test  transform_node_64e_s2.1_hz.test  transform_node_hz.test  transform_node_vlp16_hz.test  transform_nodelet_32e_hz.test  transform_nodelet_64e_s2.1_hz.test  transform_nodelet_hz.test  transform_nodelet_vlp16_hz.test  two_nodelet_managers.test
(+155 files in other folders)
