<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>velodyne_driver</name>
    <version>1.5.2</version>
    <description>
        ROS device driver for Velodyne 3D LIDARs.
    </description>
    <maintainer email="jwhitley@autonomoustuff.com">Josh Whitley</maintainer>
    <maintainer email="brice.rebsamen@gmail.com">Brice Rebsamen</maintainer>
    <author>Jack O'Quin</author>
    <author>Patrick Beeson</author>
    <author>Michael Quinlan</author>
    <author>Yaxin Liu</author>
    <author>Andreas Klintberg</author>

    <license>BSD</license>
    
    <url type="website">http://www.ros.org/wiki/velodyne_driver</url>
    <url type="repository">https://github.com/ros-drivers/velodyne</url>
    <url type="bugtracker">https://github.com/ros-drivers/velodyne/issues</url>

    
    <buildtool_depend>ament_cmake</buildtool_depend>
  
    
    <depend>rclcpp</depend>
    <depend>rmw_implementation</depend>
    <depend>diagnostic_updater</depend>
    <depend>libpcap</depend>
    <depend>pluginlib</depend>
    <depend>console_bridge</depend>
    <depend>tf2</depend>
    <depend>velodyne_msgs</depend>
    <depend>diagnostic_msgs</depend>
    
    
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_cmake_gtest</test_depend>
    
    <export>
        <build_type>ament_cmake</build_type>
    </export>
    
</package>


