<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>velodyne_driver</name>
  <version>2.4.0</version>
  <description>
    ROS device driver for Velodyne 3D LIDARs.
  </description>
  <maintainer email="whitleysoftwareservices@gmail.com">Josh Whitley</maintainer>
  <maintainer email="brice.rebsamen@gmail.com">Brice Rebsamen</maintainer>

  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/velodyne_driver</url>
  <url type="repository">https://github.com/ros-drivers/velodyne</url>
  <url type="bugtracker">https://github.com/ros-drivers/velodyne/issues</url>

  <author>Jack O'Quin</author>
  <author>Patrick Beeson</author>
  <author>Michael Quinlan</author>
  <author>Yaxin Liu</author>
  <author>Andreas Klintberg</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>libpcap</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2_ros</depend>
  <depend>velodyne_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
