<?xml version="1.0"?>
<package>
  <name>velodyne_gps_imu</name>
  <version>0.0.0</version>
  <description>The Velodyne GPS/IMU driver</description>
  <maintainer email="dillenberger@uni-koblenz.de">Denis Dillenberger</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/velodyne_gps_imu</url> -->
  <author email="dillenberger@uni-koblenz.de">Denis Dillenberger</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nmea_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>nmea_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
