<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>velodyne_pcl</name>
  <version>1.6.0</version>
  <description>The velodyne_pcl package</description>

  <maintainer email="josh.whitley@autoware.org">Josh Whitley</maintainer>
  <author>Sebastian Pütz</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/velodyne_pcl</url>
  <url type="repository">https://github.com/ros-drivers/velodyne</url>
  <url type="bugtracker">https://github.com/ros-drivers/velodyne/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <depend>pcl_ros</depend>

</package>
