<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>velodyne_pointcloud</name>
  <version>2.4.0</version>
  <description>
    Point cloud conversions for Velodyne 3D LIDARs.
  </description>
  <maintainer email="whitleysoftwareservices@gmail.com">Josh Whitley</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/velodyne_pointcloud</url>
  <url type="repository">https://github.com/ros-drivers/velodyne</url>
  <url type="bugtracker">https://github.com/ros-drivers/velodyne/issues</url>
  <author>Jack O'Quin</author>
  <author>Piyush Khandelwal</author>
  <author>Jesse Vera</author>
  <author>Andreas Klintberg</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>angles</depend>
  <depend>diagnostic_updater</depend>
  <depend>geometry_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <depend>message_filters</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>velodyne_msgs</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
